# atrium

./: .env.example  .gitignore  README.md  SETUP.md  index.html  package.json  tailwind.config.ts  vitest.config.ts
.atrium/: waves.json
docs/: PRD.md
docs/screenshots/: SHOTLIST.md
docs/waves/: wave-5-dogfood.md  wave-6.md
extension/: .vscodeignore  LICENSE  README.md  SETUP.md  esbuild.host.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.webview.json  vite.config.mts  vitest.config.mts  vitest.setup.ts
extension/scripts/: regen-snapshot.ts
extension/src/: atrium-board.json  board.test.ts  board.ts  cockpit-html.test.ts  cockpit-html.ts  discover.test.ts  discover.ts  extension.ts  git.test.ts  git.ts  linear-source.ts  linear-writes.test.ts  linear-writes.ts  project-match.test.ts  project-match.ts  wave-files.test.ts  wave-files.ts
extension/webview/: App.tsx  Cockpit.tsx  DesignView.tsx  DocPreview.tsx  HelpModal.tsx  MockupPreview.tsx  PlanView.tsx  PrdView.tsx  SprintBoard.test.tsx  SprintBoard.tsx  StatusStrip.test.tsx  StatusStrip.tsx  TicketModal.test.tsx  TicketModal.tsx  UatView.tsx  agentBriefing.ts  dnd.ts  ui.tsx  (+23 more)
files/: atrium-chat-architecture.md  atrium-chat.html  atrium-ide-architecture.md  atrium-settings.html  atrium-spec.md  atrium-sprint-horizon.html  atrium-v2.html  atrium-v3.html  atrium-v4.html  atrium-v5.html  atrium-v6.html  atrium.html
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: git_status.rs  git_watcher.rs  lib.rs  main.rs
(+10 files in other folders)
